--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         </div>
     </section>
     <footer>
-        <h3>Mission <span>2022</span></h3>
+        <h2>Mission <span>2022</span></h2>
         <p>Hard work, Perseverance, and Determination for 2022</p>
-        <p>To get in touch email me at <a href="">web123@gmail.com</a></p>
+        <p>To get in touch email me at <span>web123@gmail.com</span></p>
     </footer>
 </body>
 
